Fix navbar on iPhone Safari

--- a/src/css/base/variables.css
+++ b/src/css/base/variables.css
@@ -51,6 +51,7 @@
   --line-height-subpage-narrow: 1.5;
 
   --width-main-container: 800px;
+  --visual-viewport-offset-top: 0px;
 }
 
 @media (prefers-color-scheme: dark) {
